--- a/FUNDAMENTOS3_CyP_1157.ipynb
+++ b/FUNDAMENTOS3_CyP_1157.ipynb
@@ -6,7 +6,7 @@
       "name": "FUNDAMENTOS3_CyP_1157.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNxjMULvQWaXh86kuOdQISL",
+      "authorship_tag": "ABX9TyPvLqnYdhwtqMs7TcHGt09W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -589,7 +589,7 @@
         "    print(\"El numero es negativo, intenta de nuevo\")\n",
         "print(\"Total de iteraciones=\",contador)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -620,7 +620,7 @@
         "    valor=int(input(\"Dame un valor entero: \"))\n",
         "print(\"Fin del programa\")"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -678,7 +678,7 @@
         "else:\n",
         "    print(\"El numero ingresado no es correcto\")"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -724,7 +724,7 @@
         "    else:\n",
         "        print(\"El numero ingresado no es correcto\")"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -772,7 +772,7 @@
         "    else:\n",
         "        print(\"El numero ingresado no es correcto. Intente de nuevo\")"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -783,6 +783,52 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "l3UDAddgRll3"
+      },
+      "source": [
+        "# estructura Do - while\n",
+        "\n",
+        "### Lo mismo que while pero, primero hace y despues pregunta (evalua)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4Mmp7vJMThVc"
+      },
+      "source": [
+        "#include <stdio.h>\n",
+        "\n",
+        "int main()\n",
+        "{\n",
+        "    int valor=0;\n",
+        "    printf(\"-.-.-.-.- con do-while -.-.-.-.-.-\");\n",
+        "    do{\n",
+        "        printf(\"%i \\n\",valor);\n",
+        "        printf(\"Dame un valor entero: \");\n",
+        "        scanf(\"%i\",&valor);\n",
+        "    }while(valor !=0);\n",
+        "    printf(\"Fin del programa\\n\");\n",
+        "    return 0;\n",
+        "}\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nJbNkz0KTp0L"
+      },
+      "source": [
+        "# ejercicios for, while"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
