--- a/Fundamentos4_CYP_1157.ipynb
+++ b/Fundamentos4_CYP_1157.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Fundamentos4_CYP_1157.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOzzYJi+CDGrzqFtAvyTHjZ",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyOIFdt7MtiAJaGw/0rRIvVd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,7 +69,7 @@
         "    res = op1 + op2\n",
         "    return res"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -86,7 +87,7 @@
         "res=sumar(33,22)\n",
         "print(res)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -110,7 +111,7 @@
       "source": [
         "print(\"Hola\",\"Jesus\", sep=\"-\")"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -139,7 +140,7 @@
         "    #return None\n",
         "imprime_cuadro()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -181,7 +182,7 @@
         "res=imprime_cuadro()\n",
         "print(res)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -222,7 +223,7 @@
         "        c=valor*veces\n",
         "    return c"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -238,7 +239,7 @@
         "res=multiplicar(None,5)\n",
         "print(res)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -283,7 +284,7 @@
         "    c=op1/op2\n",
         "    return c"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -303,7 +304,7 @@
         "res=dividir(num2,num1)\n",
         "print(res)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -341,13 +342,506 @@
         "res=dividir(op2=num2,op1=num1)\n",
         "print(res)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "5.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Argumento por defecto\n",
+        "\n",
+        "Es la capacidad de las funciones de establecer un valor por defecto (Default)\n",
+        "\n",
+        "Si no se envía a dicho parámetro, entonces se asigna el que el programador asigno como default"
+      ],
+      "metadata": {
+        "id": "ZcUZOBRT-JA2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def dividir(op1,op2=2):\n",
+        "    c=op1/op2\n",
+        "    return c\n",
+        "print(dividir(25))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "J18cDXWm-hEm",
+        "outputId": "15dcd64d-0ec8-4812-e06f-0e9f7abff9f6"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "12.5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Este concepto se puede ejemplificar con la función **print**"
+      ],
+      "metadata": {
+        "id": "a1m98LRo-6vy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "help(print)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bmxyJPHC_m2D",
+        "outputId": "b7ce2f1a-8f52-48d8-921e-39b001257305"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Help on built-in function print in module builtins:\n",
+            "\n",
+            "print(...)\n",
+            "    print(value, ..., sep=' ', end='\\n', file=sys.stdout, flush=False)\n",
+            "    \n",
+            "    Prints the values to a stream, or to sys.stdout by default.\n",
+            "    Optional keyword arguments:\n",
+            "    file:  a file-like object (stream); defaults to the current sys.stdout.\n",
+            "    sep:   string inserted between values, default a space.\n",
+            "    end:   string appended after the last value, default a newline.\n",
+            "    flush: whether to forcibly flush the stream.\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nombre=\"Jose\"\n",
+        "edad=18\n",
+        "print(nombre,edad,sep='+-+-+-+-+-+-+-+')\n",
+        "print(\"Hola\", end=\" \")\n",
+        "print(\"-------\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YhGm2ngH_qXW",
+        "outputId": "62ad3fb4-3383-4196-b267-94a713dc5a1f"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Jose+-+-+-+-+-+-+-+18\n",
+            "Hola -------\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# ejercicio de Argumentos posicionales"
+      ],
+      "metadata": {
+        "id": "L-JtdosZAX5H"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def comanda(comensal=1,primer=\"Consome\",segundo=\"Arroz rojo\", tercero=\"Enchiladas\"):\n",
+        "    print(f\"El comensal 1 {comensal} quiere: \")\n",
+        "    print(\"\\t Entrada:\",primer)\n",
+        "    print(\"\\t Medio:\",segundo)\n",
+        "    print(\"\\t Plato fuerte:\",tercero)\n",
+        "\n",
+        "comanda()\n",
+        "print(\"\\n\")\n",
+        "comanda(3,\"Ensalada\",\"Arroz blanco\",\"Esparragos al horno\")\n",
+        "print(\"\\n\")\n",
+        "comanda(segundo=\"Arroz blanco\",tercero=\"Esparragos al horno\",primer=\"Ensalada\",comensal=3)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5RuZq0G1AmAx",
+        "outputId": "d5b03973-f159-4800-9eda-69969497a389"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "El comensal 1 1 quiere: \n",
+            "\t Entrada: Consome\n",
+            "\t Medio: Arroz rojo\n",
+            "\t Plato fuerte: Enchiladas\n",
+            "\n",
+            "\n",
+            "El comensal 1 3 quiere: \n",
+            "\t Entrada: Ensalada\n",
+            "\t Medio: Arroz blanco\n",
+            "\t Plato fuerte: Esparragos al horno\n",
+            "\n",
+            "\n",
+            "El comensal 1 3 quiere: \n",
+            "\t Entrada: Ensalada\n",
+            "\t Medio: Arroz blanco\n",
+            "\t Plato fuerte: Esparragos al horno\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Argumentos enviados en grupo en una tupla.\n",
+        "\n",
+        "esto sirve para enviar multiples argumentos a una función empleando el comodin *.\n",
+        "\n",
+        "```\n",
+        "def mifun(args* ):\n",
+        "    <cuerpo de la func>\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "sxDFqopdDiZr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def comanda2(*opciones ):\n",
+        "    print(opciones)\n",
+        "    print(f\"El comensal {opciones[0]} pidio:\")\n",
+        "    print(\"\\tEntrada:\",opciones[1])\n",
+        "    print(\"\\tSegundo:\",opciones[2])\n",
+        "    print(\"\\tPlato Fuerte:\",opciones[3])\n",
+        "    print(\"indicaciones extra:\")\n",
+        "    for instruccion in opciones[4::]:\n",
+        "        print(\"\\n\",instruccion)\n",
+        "comanda2(1,\"Sopa de fideo\",\"Arroz\",\"Arrachera\",\"La arrachera que aún se mueva\",\"Postre: Gelatina\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "li7-sSeIEAJb",
+        "outputId": "388f3b49-4659-4453-cb50-3bfe020a98a6"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(1, 'Sopa de fideo', 'Arroz', 'Arrachera', 'La arrachera que aún se mueva', 'Postre: Gelatina')\n",
+            "El comensal 1 pidio:\n",
+            "\tEntrada: Sopa de fideo\n",
+            "\tSegundo: Arroz\n",
+            "\tPlato Fuerte: Arrachera\n",
+            "indicaciones extra:\n",
+            "\n",
+            " La arrachera que aún se mueva\n",
+            "\n",
+            " Postre: Gelatina\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Argumentos enviados en un diccionario\n",
+        "\n",
+        "Es el mismo concepto que el anterior pero se usa el comodin ** y se mapea a un diccionario"
+      ],
+      "metadata": {
+        "id": "PhiyIhp3HBdV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def comanda3(**opciones):\n",
+        "    ops=opciones.keys()  # Tupla con las llaves del diccionario\n",
+        "    print(ops)\n",
+        "    for key in ops:\n",
+        "        print(f\"{key} = {opciones[key]}\")\n",
+        "\n",
+        "comanda3(segundo=\"arroz blanco\",tercero=\"Esparragos al horno\",primer=\"Ensalada\",comensal=3)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YQ9IEzeQHTuc",
+        "outputId": "421850bb-e6f4-48b5-98ac-839c1fec586a"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "dict_keys(['segundo', 'tercero', 'primer', 'comensal'])\n",
+            "segundo = arroz blanco\n",
+            "tercero = Esparragos al horno\n",
+            "primer = Ensalada\n",
+            "comensal = 3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Modularidad y bibliotecas.\n",
+        "Todos los lenguejes de programación tiene la capacidad de compartir\n",
+        "codigo entre la comunidad de programadores.\n",
+        "\n",
+        "Para ello cada lenguaje establece un mecanismo para escribir y compartir\n",
+        "bibliotecas"
+      ],
+      "metadata": {
+        "id": "zU2ut2mZJaut"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install simple_chalk"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "N87WkY0oL8U1",
+        "outputId": "9d74f4fc-5f0a-45db-dce8-fd57753eab60"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting simple_chalk\n",
+            "  Downloading simple_chalk-0.1.0.tar.gz (13 kB)\n",
+            "Building wheels for collected packages: simple-chalk\n",
+            "  Building wheel for simple-chalk (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for simple-chalk: filename=simple_chalk-0.1.0-py3-none-any.whl size=22163 sha256=0bf7e96325ea25cb960a8956baa9731f0b4d6420a3b7c1ab6b658ff14f0bcadc\n",
+            "  Stored in directory: /root/.cache/pip/wheels/24/e2/84/d54838032016039eef79df1137b91defaa6db068d825dfcdcd\n",
+            "Successfully built simple-chalk\n",
+            "Installing collected packages: simple-chalk\n",
+            "Successfully installed simple-chalk-0.1.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from simple_chalk import chalk, yellow\n",
+        "print(chalk.yellow(\"Hola en color amarrillo\"))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tgvXeVefKlKD",
+        "outputId": "d9eaf924-d344-4f72-be7d-2a6b60be5318"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[33mHola en color amarrillo\u001b[0m\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# ¿Como escribo un módulo (biblioteca)?\n",
+        "se define en un archivo de biblioteca"
+      ],
+      "metadata": {
+        "id": "A1vNgn2wPDCB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!cat mi_modulo.py"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "I4h-nAm8QTxk",
+        "outputId": "687b788a-cf71-41f1-9e5d-a0ad8e56cb7a"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "def sumar(a,b):\r\n",
+            "    return a + b\r\n",
+            "def mi_print(texto, final):\r\n",
+            "    print(\"Super:\", text,end=final)\r\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import mi_modulo\n",
+        "\n",
+        "res= mi_modulo.sumar(7,5)\n",
+        "print(res)\n",
+        "\n",
+        "mi_modulo.mi_print(\"Jesus\",\"\\n\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "A5nhZ6krQjdU",
+        "outputId": "22df08bf-a09a-49ff-c51c-b00355cfba33"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "12\n",
+            "Super: Jesus\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from mi_modulo import sumar\n",
+        "res=sumar(5,3)\n",
+        "print(res)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pAgAUevFRyiS",
+        "outputId": "11ba4e2f-0397-4eef-bab5-f3d0e45e07bf"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Manejo de archivos con Python3\n",
+        "\n",
+        "- Leer archivos\n",
+        "- Escribir en archivos\n",
+        "- Manipular La información\n"
+      ],
+      "metadata": {
+        "id": "r3INXi4GSfFf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "archivo=open(\"salida.txt\",\"wt\")\n",
+        "archivo.write(\"Hola mundo\")\n",
+        "archivo.close"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "j1TS51UqSsoI",
+        "outputId": "6784e840-3414-4867-c0a0-fb962b6d74db"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<function TextIOWrapper.close>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!cat salida.txt"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4ty_6x_wS9p6",
+        "outputId": "d850d267-41f6-4100-da8f-a596a6aff8db"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hola mundo"
           ]
         }
       ]
