--- a/Fundamentos4_CYP_1157.ipynb
+++ b/Fundamentos4_CYP_1157.ipynb
@@ -6,7 +6,7 @@
       "name": "Fundamentos4_CYP_1157.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOIFdt7MtiAJaGw/0rRIvVd",
+      "authorship_tag": "ABX9TyNt1nDyZSIzeLHI31IWDbCX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -413,7 +413,7 @@
         "id": "bmxyJPHC_m2D",
         "outputId": "b7ce2f1a-8f52-48d8-921e-39b001257305"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -451,7 +451,7 @@
         "id": "YhGm2ngH_qXW",
         "outputId": "62ad3fb4-3383-4196-b267-94a713dc5a1f"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -494,7 +494,7 @@
         "id": "5RuZq0G1AmAx",
         "outputId": "d5b03973-f159-4800-9eda-69969497a389"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -557,7 +557,7 @@
         "id": "li7-sSeIEAJb",
         "outputId": "388f3b49-4659-4453-cb50-3bfe020a98a6"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -606,7 +606,7 @@
         "id": "YQ9IEzeQHTuc",
         "outputId": "421850bb-e6f4-48b5-98ac-839c1fec586a"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -649,7 +649,7 @@
         "id": "N87WkY0oL8U1",
         "outputId": "9d74f4fc-5f0a-45db-dce8-fd57753eab60"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -681,7 +681,7 @@
         "id": "tgvXeVefKlKD",
         "outputId": "d9eaf924-d344-4f72-be7d-2a6b60be5318"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -714,7 +714,7 @@
         "id": "I4h-nAm8QTxk",
         "outputId": "687b788a-cf71-41f1-9e5d-a0ad8e56cb7a"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -745,7 +745,7 @@
         "id": "A5nhZ6krQjdU",
         "outputId": "22df08bf-a09a-49ff-c51c-b00355cfba33"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -771,7 +771,7 @@
         "id": "pAgAUevFRyiS",
         "outputId": "11ba4e2f-0397-4eef-bab5-f3d0e45e07bf"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -809,7 +809,7 @@
         "id": "j1TS51UqSsoI",
         "outputId": "6784e840-3414-4867-c0a0-fb962b6d74db"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -835,13 +835,349 @@
         "id": "4ty_6x_wS9p6",
         "outputId": "d850d267-41f6-4100-da8f-a596a6aff8db"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Hola mundo"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Para abrir un archivo ya sea para lectura o escritura se usa la función open.\n",
+        "\n",
+        "```\n",
+        "open(fileobj,'XY')\n",
+        "```\n",
+        "Donde File object es el nombre del archivo, y el segundo argumento de la función, esta formado por un par de letras. La primer letra establece el tipo de apertura del archivo:\n",
+        "\n",
+        "1. **r** Lectura\n",
+        "2. **w** Escritura\n",
+        "3. **x** Escritura exclusiva, es decir solo en el caso que el archivo no exista.\n",
+        "4. **a** Append\n",
+        "\n",
+        "El segundo caracter indica el formato del archivo:\n",
+        "\n",
+        "1. **t** formato de texto\n",
+        "2. **b** formato binario"
+      ],
+      "metadata": {
+        "id": "N2Z0zNYRPnew"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "archivo= open(\"ejemplo1.txt\",\"wt\")\n",
+        "\n",
+        "for x in range(10):\n",
+        "    archivo.write(\"Hola mundo\"+str(x)+\"\\n\")\n",
+        "cont=archivo.write(\"Otra cosa\")\n",
+        "\n",
+        "archivo.close()\n",
+        "\n",
+        "print(\"escritos:\",cont)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "L-sl-oSiQzpg",
+        "outputId": "98c1ed5e-ee0c-4ce4-94d5-14a9df71fed6"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "escritos: 9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# La función write\n",
+        "\n",
+        "La función escribe datos en un archivo abierto para escritura, para ello utiliza un cursor (apuntador) al siguiente byte dentro del archivo.\n",
+        "\n",
+        "Cuando el archivo se abre, se crea este apuntador y se posiciona para moverse de forma automatica cada vez que escribimos.\n",
+        "\n",
+        "La función write regresa un valor entero que indica el número de caracteres del archivo"
+      ],
+      "metadata": {
+        "id": "QUl9Wk8XRpMi"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Lectura de un archivo.\n",
+        "\n",
+        "Para leer un archivo con programación se puede emplear una de tres opciones (funciones):\n",
+        "\n",
+        "1. read() lee todo el archivo y lo regresa como texto\n",
+        "2. readline() Lee una sóla línea (Hasta encontrar el sig. \\n) y la regresa como string\n",
+        "3. readlines() lee todo el archivo y lo regresa como una lista de texto separa por saltos de linia"
+      ],
+      "metadata": {
+        "id": "wnbeQUZsTBFx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!cat ejemplo1.txt"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jwg3inx7T8wO",
+        "outputId": "6f92d00d-2ddc-4094-96aa-9c263578d846"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hola mundo0\n",
+            "Hola mundo1\n",
+            "Hola mundo2\n",
+            "Hola mundo3\n",
+            "Hola mundo4\n",
+            "Hola mundo5\n",
+            "Hola mundo6\n",
+            "Hola mundo7\n",
+            "Hola mundo8\n",
+            "Hola mundo9\n",
+            "Otra cosa"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "archivo1=open(\"ejemplo1.txt\",\"rt\")\n",
+        "datos=archivo1.read()\n",
+        "separados= datos.split(\"\\n\")\n",
+        "print(separados)\n",
+        "for index in range(len(separados)):\n",
+        "    if index % 2 == 0:\n",
+        "        print(separados [index].upper())\n",
+        "    else:\n",
+        "        print(separados[index].lower())\n",
+        "print(\"--->\"+datos+\"<---\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2ztMLCuOUItL",
+        "outputId": "e15f0883-ad5c-490c-b00c-4ff9007a8d94"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Hola mundo0', 'Hola mundo1', 'Hola mundo2', 'Hola mundo3', 'Hola mundo4', 'Hola mundo5', 'Hola mundo6', 'Hola mundo7', 'Hola mundo8', 'Hola mundo9', 'Otra cosa']\n",
+            "HOLA MUNDO0\n",
+            "hola mundo1\n",
+            "HOLA MUNDO2\n",
+            "hola mundo3\n",
+            "HOLA MUNDO4\n",
+            "hola mundo5\n",
+            "HOLA MUNDO6\n",
+            "hola mundo7\n",
+            "HOLA MUNDO8\n",
+            "hola mundo9\n",
+            "OTRA COSA\n",
+            "--->Hola mundo0\n",
+            "Hola mundo1\n",
+            "Hola mundo2\n",
+            "Hola mundo3\n",
+            "Hola mundo4\n",
+            "Hola mundo5\n",
+            "Hola mundo6\n",
+            "Hola mundo7\n",
+            "Hola mundo8\n",
+            "Hola mundo9\n",
+            "Otra cosa<---\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "archivo2 = open(\"ejemplo1.txt\",\"rt\")\n",
+        "for x in range(11):\n",
+        "    if x%2==0:\n",
+        "        print(archivo2.readline().upper(),end=\"\")\n",
+        "    else:\n",
+        "        print(archivo2.readline().lower(),end=\"\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WwtRos2uVEu0",
+        "outputId": "654e2197-f881-4fa1-86b6-86a87a7d9e43"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "HOLA MUNDO0\n",
+            "hola mundo1\n",
+            "HOLA MUNDO2\n",
+            "hola mundo3\n",
+            "HOLA MUNDO4\n",
+            "hola mundo5\n",
+            "HOLA MUNDO6\n",
+            "hola mundo7\n",
+            "HOLA MUNDO8\n",
+            "hola mundo9\n",
+            "OTRA COSA"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "archivo3=open(\"ejemplo1.txt\",\"rt\")\n",
+        "lineas = archivo3.readlines()\n",
+        "print(lineas)\n",
+        "\n",
+        "#For each\n",
+        "for texto in lineas:\n",
+        "    print(texto.rstrip())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "12Jy9QrNb_E4",
+        "outputId": "98de921c-4014-4dd0-db99-bb2100c53d3a"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Hola mundo0\\n', 'Hola mundo1\\n', 'Hola mundo2\\n', 'Hola mundo3\\n', 'Hola mundo4\\n', 'Hola mundo5\\n', 'Hola mundo6\\n', 'Hola mundo7\\n', 'Hola mundo8\\n', 'Hola mundo9\\n', 'Otra cosa']\n",
+            "Hola mundo0\n",
+            "Hola mundo1\n",
+            "Hola mundo2\n",
+            "Hola mundo3\n",
+            "Hola mundo4\n",
+            "Hola mundo5\n",
+            "Hola mundo6\n",
+            "Hola mundo7\n",
+            "Hola mundo8\n",
+            "Hola mundo9\n",
+            "Otra cosa\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!cat ejemplo2.txt"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WNtBQfAMdiIu",
+        "outputId": "661b614a-23ee-4a2c-bb71-158b04d5ae5a"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   1   , 2,   3, 4 ,  5 \r\n",
+            "      10  , 20 , 30      ,  40\r\n",
+            "     100   , 200    , 300"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "archivo4=open(\"ejemplo2.txt\",\"rt\")\n",
+        "numero=archivo4.readlines()\n",
+        "print(numero,end=(\"\\n\"))\n",
+        "for num in numero:\n",
+        "    print(num.rstrip())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pVsG_P39efkt",
+        "outputId": "9f67f846-4a4e-4538-b13a-dbef1671db00"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['   1   , 2,   3, 4 ,  5 \\n', '      10  , 20 , 30      ,  40\\n', '     100   , 200    , 300']\n",
+            "   1   , 2,   3, 4 ,  5\n",
+            "      10  , 20 , 30      ,  40\n",
+            "     100   , 200    , 300\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "archivo4 = open(\"ejemplo2.txt\" , \"rt\")\n",
+        "lineas = archivo4.readlines()\n",
+        "print(lineas)\n",
+        "suma=0\n",
+        "for linea in lineas[:len(lineas)-1:]:\n",
+        "    for numero in linea.strip().split(','):\n",
+        "        suma += int(numero.strip())\n",
+        "print(suma)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "i1ApkCmAibXQ",
+        "outputId": "f73cf7cf-41d6-4daf-ef9c-edf928190343"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['   1   , 2,   3, 4 ,  5 \\n', '      10  , 20 , 30      ,  40\\n', '     100   , 200    , 300\\n', '         ']\n",
+            "715\n"
           ]
         }
       ]
